# Mine-Rush

./: CMakeLists.txt  README.md  run_game.sh
src/: logic.c  mine_gui.c  mine_terminal  mine_terminal.c  ncurses_functions.c  sdl2_game  sdl_functions.c  sdl_functions.h
