cmake_minimum_required(VERSION 3.0.0)
project(sdl2_game VERSION 0.1.0)
# set(CMAKE_C_FLAGS "-Wall -Wextra")
find_package(SDL2 REQUIRED)
find_package(Curses REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_image REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS} ${CURSES_INCLUDE_DIRS} ${SDL2_ttf_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/src")
add_executable(sdl2_game src/mine_gui.c src/sdl_functions.c src/sdl_functions.h src/logic.c)
target_link_libraries(sdl2_game ${SDL2_LIBRARIES} ${SDL2_ttf_LIBRARIES} -lSDL2_ttf ${SDL2_IMAGE_LIBRARIES} -lSDL2_image)
add_executable(mine_terminal src/mine_terminal.c src/sdl_functions.h src/logic.c src/ncurses_functions.c)
target_link_libraries(mine_terminal ${CURSES_LIBRARIES})
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
